--- a/views/admin/edit_blacklist.ejs
+++ b/views/admin/edit_blacklist.ejs
@@ -2,7 +2,7 @@
 <% if (typeof error !== 'undefined') { %>
   <div style="color: red; font-weight: bold; margin-bottom: 1em;"><%= error %></div>
 <% } %>
-<form action="/admin/edit_blacklist" method="POST">
+<form action="/admin/blacklist" method="POST">
   <textarea name="blacklist" rows="20" style="width: 100%; font-family: monospace;"><%= blacklist.join('\n') %></textarea>
   <br><br>
   <button type="submit">Save Blacklist</button>
