--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -38,7 +38,7 @@
          User Management
       </a>
       <a href="/admin/manifest/config"
-         class="block px-3 py-2 rounded hover:bg-gray-700 <%= currentPath === '/admin/manifest/config' ? 'bg-gray-700' : '' %>">
+         class="block px-3 py-2 rounded hover:bg-gray-700 <%= currentPath === '/admin/manifest' ? 'bg-gray-700' : '' %>">
          Launcher Manifest
       </a>
     </nav>
