Fix manifest generator sidebar link

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -37,7 +37,7 @@
          class="block px-3 py-2 rounded hover:bg-gray-700 <%= currentPath === '/admin/users' ? 'bg-gray-700' : '' %>">
          User Management
       </a>
-      <a href="/admin/manifest/config"
+      <a href="/admin/manifest"
          class="block px-3 py-2 rounded hover:bg-gray-700 <%= currentPath === '/admin/manifest' ? 'bg-gray-700' : '' %>">
          Launcher Manifest
       </a>
